bug white space v2

--- a/styles/Showcase.module.css
+++ b/styles/Showcase.module.css
@@ -11,7 +11,7 @@
 .bgBox {
     display: inline-block;
     position: absolute;
-    background: hsl(269, 69%, 46%) !important;
+    background: hsl(269, 69%, 46%);
     bottom: 0;
     padding-top: 16vh;
 }
