--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
     padding: 0;
     font-family: Roboto, sans-serif;
     height: 100%;
-    background: black;
+    background: black !important;
 }
 
 a {
